ffi/pigpio.h

typedef struct
{
   uint32_t gpioOn;
   uint32_t gpioOff;
   uint32_t usDelay;
} gpioPulse_t;
typedef void (*gpioAlertFunc_t)    (int      gpio,
                                    int      level,
                                    uint32_t tick);
typedef void (*gpioAlertFuncEx_t)  (int      gpio,
                                    int      level,
                                    uint32_t tick,
                                    void    *userdata);
typedef void (*gpioISRFunc_t)      (int      gpio,
                                    int      level,
                                    uint32_t tick);
typedef void (*gpioISRFuncEx_t)    (int      gpio,
                                    int      level,
                                    uint32_t tick,
                                    void    *userdata);
int gpioSetAlertFunc(unsigned user_gpio, gpioAlertFunc_t f);
int gpioSetAlertFuncEx(
   unsigned user_gpio, gpioAlertFuncEx_t f, void *userdata);
int gpioSetISRFunc(
   unsigned gpio, unsigned edge, int timeout, gpioISRFunc_t f);
int gpioSetISRFuncEx(
   unsigned gpio,
   unsigned edge,
   int timeout,
   gpioISRFuncEx_t f,
   void *userdata);
int gpioNotifyOpen(void);
int gpioNotifyOpenWithSize(int bufSize);
int gpioNotifyBegin(unsigned handle, uint32_t bits);
int gpioNotifyPause(unsigned handle);
int gpioNotifyClose(unsigned handle);
int gpioWaveClear(void);
int gpioWaveAddNew(void);
int gpioWaveAddGeneric(unsigned numPulses, gpioPulse_t *pulses);
int gpioWaveCreate(void);
int gpioWaveCreatePad(int pctCB, int pctBOOL, int pctTOOL);
int gpioWaveDelete(unsigned wave_id);
int gpioWaveTxSend(unsigned wave_id, unsigned wave_mode);
int gpioWaveTxAt(void);
int gpioWaveTxBusy(void);
int gpioWaveTxStop(void);
int gpioWaveGetMicros(void);
int gpioWaveGetHighMicros(void);
int gpioWaveGetMaxMicros(void);
int gpioWaveGetPulses(void);
int gpioWaveGetHighPulses(void);
int gpioWaveGetMaxPulses(void);
int gpioWaveGetCbs(void);
int gpioWaveGetHighCbs(void);
int gpioWaveGetMaxCbs(void);
int gpioSerialReadOpen(unsigned user_gpio, unsigned baud, unsigned data_bits);
int gpioSerialReadInvert(unsigned user_gpio, unsigned invert);
int gpioSerialRead(unsigned user_gpio, void *buf, size_t bufSize);
int gpioSerialReadClose(unsigned user_gpio);
int i2cOpen(unsigned i2cBus, unsigned i2cAddr, unsigned i2cFlags);
int i2cClose(unsigned handle);
int i2cWriteQuick(unsigned handle, unsigned bit);
int i2cWriteByte(unsigned handle, unsigned bVal);
int i2cReadByte(unsigned handle);
int i2cWriteByteData(unsigned handle, unsigned i2cReg, unsigned bVal);
int i2cWriteWordData(unsigned handle, unsigned i2cReg, unsigned wVal);
int i2cReadByteData(unsigned handle, unsigned i2cReg);
int i2cReadWordData(unsigned handle, unsigned i2cReg);