lib/src/bindings_pi.dart


  int gpioSetAlertFunc(
    int user_gpio,
    ffi.Pointer<ffi.NativeFunction<gpioAlertFunc_t>> f,
  ) {
    _gpioSetAlertFunc ??=
        _dylib.lookupFunction<_c_gpioSetAlertFunc, _dart_gpioSetAlertFunc>(
            'gpioSetAlertFunc');
    return _gpioSetAlertFunc(
      user_gpio,
      f,
    );
  }

  _dart_gpioSetAlertFunc _gpioSetAlertFunc;

  int gpioSetAlertFuncEx(
    int user_gpio,
    ffi.Pointer<ffi.NativeFunction<gpioAlertFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetAlertFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetAlertFuncEx, _dart_gpioSetAlertFuncEx>(
            'gpioSetAlertFuncEx');
    return _gpioSetAlertFuncEx(
      user_gpio,
      f,
      userdata,
    );
  }

  _dart_gpioSetAlertFuncEx _gpioSetAlertFuncEx;

  int gpioSetISRFunc(
    int gpio,
    int edge,
    int timeout,
    ffi.Pointer<ffi.NativeFunction<gpioISRFunc_t>> f,
  ) {
    _gpioSetISRFunc ??=
        _dylib.lookupFunction<_c_gpioSetISRFunc, _dart_gpioSetISRFunc>(
            'gpioSetISRFunc');
    return _gpioSetISRFunc(
      gpio,
      edge,
      timeout,
      f,
    );
  }

  _dart_gpioSetISRFunc _gpioSetISRFunc;

  int gpioSetISRFuncEx(
    int gpio,
    int edge,
    int timeout,
    ffi.Pointer<ffi.NativeFunction<gpioISRFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetISRFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetISRFuncEx, _dart_gpioSetISRFuncEx>(
            'gpioSetISRFuncEx');
    return _gpioSetISRFuncEx(
      gpio,
      edge,
      timeout,
      f,
      userdata,
    );
  }

  _dart_gpioSetISRFuncEx _gpioSetISRFuncEx;

  int gpioNotifyOpen() {
    _gpioNotifyOpen ??=
        _dylib.lookupFunction<_c_gpioNotifyOpen, _dart_gpioNotifyOpen>(
            'gpioNotifyOpen');
    return _gpioNotifyOpen();
  }

  _dart_gpioNotifyOpen _gpioNotifyOpen;

  int gpioNotifyOpenWithSize(
    int bufSize,
  ) {
    _gpioNotifyOpenWithSize ??= _dylib.lookupFunction<_c_gpioNotifyOpenWithSize,
        _dart_gpioNotifyOpenWithSize>('gpioNotifyOpenWithSize');
    return _gpioNotifyOpenWithSize(
      bufSize,
    );
  }

  _dart_gpioNotifyOpenWithSize _gpioNotifyOpenWithSize;

  int gpioNotifyBegin(
    int handle,
    int bits,
  ) {
    _gpioNotifyBegin ??=
        _dylib.lookupFunction<_c_gpioNotifyBegin, _dart_gpioNotifyBegin>(
            'gpioNotifyBegin');
    return _gpioNotifyBegin(
      handle,
      bits,
    );
  }

  _dart_gpioNotifyBegin _gpioNotifyBegin;

  int gpioNotifyPause(
    int handle,
  ) {
    _gpioNotifyPause ??=
        _dylib.lookupFunction<_c_gpioNotifyPause, _dart_gpioNotifyPause>(
            'gpioNotifyPause');
    return _gpioNotifyPause(
      handle,
    );
  }

  _dart_gpioNotifyPause _gpioNotifyPause;

  int gpioNotifyClose(
    int handle,
  ) {
    _gpioNotifyClose ??=
        _dylib.lookupFunction<_c_gpioNotifyClose, _dart_gpioNotifyClose>(
            'gpioNotifyClose');
    return _gpioNotifyClose(
      handle,
    );
  }

  _dart_gpioNotifyClose _gpioNotifyClose;

  int gpioWaveClear() {
    _gpioWaveClear ??= _dylib
        .lookupFunction<_c_gpioWaveClear, _dart_gpioWaveClear>('gpioWaveClear');
    return _gpioWaveClear();
  }

  _dart_gpioWaveClear _gpioWaveClear;

  int gpioWaveAddNew() {
    _gpioWaveAddNew ??=
        _dylib.lookupFunction<_c_gpioWaveAddNew, _dart_gpioWaveAddNew>(
            'gpioWaveAddNew');
    return _gpioWaveAddNew();
  }

  _dart_gpioWaveAddNew _gpioWaveAddNew;

  int gpioWaveAddGeneric(
    int numPulses,
    ffi.Pointer<gpioPulse_t> pulses,
  ) {
    _gpioWaveAddGeneric ??=
        _dylib.lookupFunction<_c_gpioWaveAddGeneric, _dart_gpioWaveAddGeneric>(
            'gpioWaveAddGeneric');
    return _gpioWaveAddGeneric(
      numPulses,
      pulses,
    );
  }

  _dart_gpioWaveAddGeneric _gpioWaveAddGeneric;

  int gpioWaveCreate() {
    _gpioWaveCreate ??=
        _dylib.lookupFunction<_c_gpioWaveCreate, _dart_gpioWaveCreate>(
            'gpioWaveCreate');
    return _gpioWaveCreate();
  }

  _dart_gpioWaveCreate _gpioWaveCreate;

  int gpioWaveCreatePad(
    int pctCB,
    int pctBOOL,
    int pctTOOL,
  ) {
    _gpioWaveCreatePad ??=
        _dylib.lookupFunction<_c_gpioWaveCreatePad, _dart_gpioWaveCreatePad>(
            'gpioWaveCreatePad');
    return _gpioWaveCreatePad(
      pctCB,
      pctBOOL,
      pctTOOL,
    );
  }

  _dart_gpioWaveCreatePad _gpioWaveCreatePad;

  int gpioWaveDelete(
    int wave_id,
  ) {
    _gpioWaveDelete ??=
        _dylib.lookupFunction<_c_gpioWaveDelete, _dart_gpioWaveDelete>(
            'gpioWaveDelete');
    return _gpioWaveDelete(
      wave_id,
    );
  }

  _dart_gpioWaveDelete _gpioWaveDelete;

  int gpioWaveTxSend(
    int wave_id,
    int wave_mode,
  ) {
    _gpioWaveTxSend ??=
        _dylib.lookupFunction<_c_gpioWaveTxSend, _dart_gpioWaveTxSend>(
            'gpioWaveTxSend');
    return _gpioWaveTxSend(
      wave_id,
      wave_mode,
    );
  }

  _dart_gpioWaveTxSend _gpioWaveTxSend;

  int gpioWaveTxAt() {
    _gpioWaveTxAt ??= _dylib
        .lookupFunction<_c_gpioWaveTxAt, _dart_gpioWaveTxAt>('gpioWaveTxAt');
    return _gpioWaveTxAt();
  }

  _dart_gpioWaveTxAt _gpioWaveTxAt;

  int gpioWaveTxBusy() {
    _gpioWaveTxBusy ??=
        _dylib.lookupFunction<_c_gpioWaveTxBusy, _dart_gpioWaveTxBusy>(
            'gpioWaveTxBusy');
    return _gpioWaveTxBusy();
  }

  _dart_gpioWaveTxBusy _gpioWaveTxBusy;

  int gpioWaveTxStop() {
    _gpioWaveTxStop ??=
        _dylib.lookupFunction<_c_gpioWaveTxStop, _dart_gpioWaveTxStop>(
            'gpioWaveTxStop');
    return _gpioWaveTxStop();
  }

  _dart_gpioWaveTxStop _gpioWaveTxStop;

  int gpioWaveGetMicros() {
    _gpioWaveGetMicros ??=
        _dylib.lookupFunction<_c_gpioWaveGetMicros, _dart_gpioWaveGetMicros>(
            'gpioWaveGetMicros');
    return _gpioWaveGetMicros();
  }

  _dart_gpioWaveGetMicros _gpioWaveGetMicros;

  int gpioWaveGetHighMicros() {
    _gpioWaveGetHighMicros ??= _dylib.lookupFunction<_c_gpioWaveGetHighMicros,
        _dart_gpioWaveGetHighMicros>('gpioWaveGetHighMicros');
    return _gpioWaveGetHighMicros();
  }

  _dart_gpioWaveGetHighMicros _gpioWaveGetHighMicros;

  int gpioWaveGetMaxMicros() {
    _gpioWaveGetMaxMicros ??= _dylib.lookupFunction<_c_gpioWaveGetMaxMicros,
        _dart_gpioWaveGetMaxMicros>('gpioWaveGetMaxMicros');
    return _gpioWaveGetMaxMicros();
  }

  _dart_gpioWaveGetMaxMicros _gpioWaveGetMaxMicros;

  int gpioWaveGetPulses() {
    _gpioWaveGetPulses ??=
        _dylib.lookupFunction<_c_gpioWaveGetPulses, _dart_gpioWaveGetPulses>(
            'gpioWaveGetPulses');
    return _gpioWaveGetPulses();
  }

  _dart_gpioWaveGetPulses _gpioWaveGetPulses;

  int gpioWaveGetHighPulses() {
    _gpioWaveGetHighPulses ??= _dylib.lookupFunction<_c_gpioWaveGetHighPulses,
        _dart_gpioWaveGetHighPulses>('gpioWaveGetHighPulses');
    return _gpioWaveGetHighPulses();
  }

  _dart_gpioWaveGetHighPulses _gpioWaveGetHighPulses;

  int gpioWaveGetMaxPulses() {
    _gpioWaveGetMaxPulses ??= _dylib.lookupFunction<_c_gpioWaveGetMaxPulses,
        _dart_gpioWaveGetMaxPulses>('gpioWaveGetMaxPulses');
    return _gpioWaveGetMaxPulses();
  }

  _dart_gpioWaveGetMaxPulses _gpioWaveGetMaxPulses;

  int gpioWaveGetCbs() {
    _gpioWaveGetCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetCbs, _dart_gpioWaveGetCbs>(
            'gpioWaveGetCbs');
    return _gpioWaveGetCbs();
  }

  _dart_gpioWaveGetCbs _gpioWaveGetCbs;

  int gpioWaveGetHighCbs() {
    _gpioWaveGetHighCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetHighCbs, _dart_gpioWaveGetHighCbs>(
            'gpioWaveGetHighCbs');
    return _gpioWaveGetHighCbs();
  }

  _dart_gpioWaveGetHighCbs _gpioWaveGetHighCbs;

  int gpioWaveGetMaxCbs() {
    _gpioWaveGetMaxCbs ??=
        _dylib.lookupFunction<_c_gpioWaveGetMaxCbs, _dart_gpioWaveGetMaxCbs>(
            'gpioWaveGetMaxCbs');
    return _gpioWaveGetMaxCbs();
  }

  _dart_gpioWaveGetMaxCbs _gpioWaveGetMaxCbs;

  int gpioSerialReadOpen(
    int user_gpio,
    int baud,
    int data_bits,
  ) {
    _gpioSerialReadOpen ??=
        _dylib.lookupFunction<_c_gpioSerialReadOpen, _dart_gpioSerialReadOpen>(
            'gpioSerialReadOpen');
    return _gpioSerialReadOpen(
      user_gpio,
      baud,
      data_bits,
    );
  }

  _dart_gpioSerialReadOpen _gpioSerialReadOpen;

  int gpioSerialReadInvert(
    int user_gpio,
    int invert,
  ) {
    _gpioSerialReadInvert ??= _dylib.lookupFunction<_c_gpioSerialReadInvert,
        _dart_gpioSerialReadInvert>('gpioSerialReadInvert');
    return _gpioSerialReadInvert(
      user_gpio,
      invert,
    );
  }

  _dart_gpioSerialReadInvert _gpioSerialReadInvert;

  int gpioSerialRead(
    int user_gpio,
    ffi.Pointer<ffi.Void> buf,
    int bufSize,
  ) {
    _gpioSerialRead ??=
        _dylib.lookupFunction<_c_gpioSerialRead, _dart_gpioSerialRead>(
            'gpioSerialRead');
    return _gpioSerialRead(
      user_gpio,
      buf,
      bufSize,
    );
  }

  _dart_gpioSerialRead _gpioSerialRead;

  int gpioSerialReadClose(
    int user_gpio,
  ) {
    _gpioSerialReadClose ??= _dylib.lookupFunction<_c_gpioSerialReadClose,
        _dart_gpioSerialReadClose>('gpioSerialReadClose');
    return _gpioSerialReadClose(
      user_gpio,
    );
  }

  _dart_gpioSerialReadClose _gpioSerialReadClose;

  int i2cOpen(
    int i2cBus,
    int i2cAddr,
    int i2cFlags,
  ) {
    _i2cOpen ??= _dylib.lookupFunction<_c_i2cOpen, _dart_i2cOpen>('i2cOpen');
    return _i2cOpen(
      i2cBus,
      i2cAddr,
      i2cFlags,
    );
  }

  _dart_i2cOpen _i2cOpen;

  int i2cClose(
    int handle,
  ) {
    _i2cClose ??=
        _dylib.lookupFunction<_c_i2cClose, _dart_i2cClose>('i2cClose');
    return _i2cClose(
      handle,
    );
  }

  _dart_i2cClose _i2cClose;

  int i2cWriteQuick(
    int handle,
    int bit,
  ) {
    _i2cWriteQuick ??= _dylib
        .lookupFunction<_c_i2cWriteQuick, _dart_i2cWriteQuick>('i2cWriteQuick');
    return _i2cWriteQuick(
      handle,
      bit,
    );
  }

  _dart_i2cWriteQuick _i2cWriteQuick;

  int i2cWriteByte(
    int handle,
    int bVal,
  ) {
    _i2cWriteByte ??= _dylib
        .lookupFunction<_c_i2cWriteByte, _dart_i2cWriteByte>('i2cWriteByte');
    return _i2cWriteByte(
      handle,
      bVal,
    );
  }

  _dart_i2cWriteByte _i2cWriteByte;

  int i2cReadByte(
    int handle,
  ) {
    _i2cReadByte ??=
        _dylib.lookupFunction<_c_i2cReadByte, _dart_i2cReadByte>('i2cReadByte');
    return _i2cReadByte(
      handle,
    );
  }

  _dart_i2cReadByte _i2cReadByte;

  int i2cWriteByteData(
    int handle,
    int i2cReg,
    int bVal,
  ) {
    _i2cWriteByteData ??=
        _dylib.lookupFunction<_c_i2cWriteByteData, _dart_i2cWriteByteData>(
            'i2cWriteByteData');
    return _i2cWriteByteData(
      handle,
      i2cReg,
      bVal,
    );
  }

  _dart_i2cWriteByteData _i2cWriteByteData;

  int i2cWriteWordData(
    int handle,
    int i2cReg,
    int wVal,
  ) {
    _i2cWriteWordData ??=
        _dylib.lookupFunction<_c_i2cWriteWordData, _dart_i2cWriteWordData>(
            'i2cWriteWordData');
    return _i2cWriteWordData(
      handle,
      i2cReg,
      wVal,
    );
  }

  _dart_i2cWriteWordData _i2cWriteWordData;

  int i2cReadByteData(
    int handle,
    int i2cReg,
  ) {
    _i2cReadByteData ??=
        _dylib.lookupFunction<_c_i2cReadByteData, _dart_i2cReadByteData>(
            'i2cReadByteData');
    return _i2cReadByteData(
      handle,
      i2cReg,
    );
  }

  _dart_i2cReadByteData _i2cReadByteData;

  int i2cReadWordData(
    int handle,
    int i2cReg,
  ) {
    _i2cReadWordData ??=
        _dylib.lookupFunction<_c_i2cReadWordData, _dart_i2cReadWordData>(
            'i2cReadWordData');
    return _i2cReadWordData(
      handle,
      i2cReg,
    );
  }

  _dart_i2cReadWordData _i2cReadWordData;
